# WebMyCar

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs
src-tauri/src/commands/: app_file.rs  fuel.rs  mod.rs  vehicles.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/migrations/: 001_create_vehicles.sql  002_create_fuel_entries.sql  003_repair_fuel_entries_schema.sql  004_create_energy_types_and_refactor_fuel_entries.sql  005_update_energy_types_catalog.sql  006_add_price_per_liter_millis.sql  007_add_vehicle_powertrain_and_energy_types.sql  008_reseed_energy_types_reference.sql  009_create_vehicle_specs.sql  010_create_vehicle_spec_categories.sql
src-tauri/src/models/: app_file.rs  energy_type.rs  fuel.rs  mod.rs  vehicle.rs  vehicle_spec.rs
src/app/: AppShell.tsx
src/components/: DatePickerField.tsx  Header.tsx  ModalFrame.tsx  PagePlaceholder.tsx  Sidebar.tsx  ToastProvider.tsx  VehicleSpecsModal.tsx
src/features/app-file/: api.ts  types.ts
src/features/fuel/: api.ts  types.ts
src/features/vehicles/: api.ts  types.ts
src/pages/: DashboardPage.tsx  DocumentsPage.tsx  FuelPage.tsx  MaintenancePage.tsx  OdometerPage.tsx  RemindersPage.tsx  SettingsPage.tsx  VehiclesPage.tsx
