[package]
name = "app"
version = "0.1.0"
description = "WebMyCar — local vehicle management"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# rusqlite with bundled feature compiles SQLite into the binary — no system dependency needed
rusqlite = { version = "0.32", features = ["bundled"] }
# UUID v4 for generating primary keys
uuid = { version = "1", features = ["v4"] }
# chrono for RFC 3339 / ISO 8601 timestamps
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
